    * [NH-414] - Need to process <cache> and <collection-cache> in configuration files
    * [NH-417] - Column Alias bug
    * [NH-422] - <meta-value> child tag missing from <many-to-any>
    * [NH-440] - one-to-one unique foreign key mapping fails during query
    * [NH-415] - AddXmlString should rethrow exceptions it catches

New Features:

    * [NH-113] - drop table SQL will now check if the table exists on MS SQL
      to avoid unnecessary warnings.
    * [NH-450] - Added hbm2ddl NAnt task by James Geurts

Improvements:
    * [NH-403] - BinaryType.Get should now perform faster
    * [NH-398] - Bulk property get/set optimization in AbstractEntityPersister
      contributed by Roberto Paterlini. The optimization is enabled by default,
      set hibernate.use_reflection_optimizer property to false in your
      App.config file to disable it. Note that the property is global, thus
      it is only possible to set it in the app.config file in <nhibernate>
      session (see above).
    * [NH-443] - Added more details to "broken column mapping" message
    * [NH-448] - NHibernate configuration process is now closer to Hibernate:
      - hibernate.properties file corresponds to <nhibernate> section
        in app.config (mapped to NameValueSectionHandler)
      - configuration through hibernate.cfg.xml is supported
      - instead of hibernate.cfg.xml, <hibernate-configuration> section
        in app.config (mapped to NHibernate.Cfg.ConfigurationSectionHandler)
        can also be used.
      - creating a new configuration instance in version 1.0 would cause it
        to read <hibernate-configuration> section immediately. In 1.0.1 this
        was changed so that the section is only read when Configure() is called
    * HashCodeProvider is now merged into NHibernate assembly during build,
      thus it does not have to be distributed along with NHibernate.dll.

Build 1.0.0.0
========================

Improvements: